--- a/Information_Couse.html
+++ b/Information_Couse.html
@@ -8,8 +8,8 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <style>
          #post {
-        width: 600px;
-        height: 900px;
+        width: 666px;
+        height: 265px;
         background: rgb(255, 255, 255);
         float: left;
         color: black;
@@ -31,9 +31,9 @@
                 <img src=" https://websites.sportstg.com/pics/00/01/21/77/1217770_1_O.jpg" width="35%" height="40%">
             </p>
             <a href="http://127.0.0.1:5500/Home.html">Home | </a>
-            <a href="...">Imformation Couse | </a>
-            <a href="...">Fee Structure | </a>
-            <a href="...">Admission Process | </a>
+            <a href="http://127.0.0.1:5500/Information_Couse.html">Imformation Couse | </a>
+            <a href="http://127.0.0.1:5500/fee.html">Fee Structure | </a>
+            <a href="http://127.0.0.1:5500/admission.html">Admission Process | </a>
         </div>
         <div id="post">
             <h1 style="color: rgb(54, 157, 170);font-family: 'Times New Roman', Times, serif; padding-left: 12%;">
@@ -46,7 +46,13 @@
         Our distinctive curriculum offerings at Vincent SS include: Our outcomes based curriculum (5 KLAs of Science Technology
         The Arts and HPE) has been organised into the 4 New Basic organisers and staff have developed units and contexts that suppprt 
         the teaching of specific core learning outcomes appropriately across the P-7 year levels. Maths and English are taught
-        as integrated subjects across all key learning areas. Out Litaracy anhd Genre program consists
+        as integrated subjects across all key learning areas. Out Litaracy anhd Genre program consists of an oral program for P-2 
+        classes, a whole school spelling program Letter land for Yr P-3 classes and Spelling-A Comprehensive Program Teaching Children 
+        How to Spell for Yr 4-7 classes and an individual spelling program/folder for Yr 4-7 classes and a structured and sequential
+        reading skills program LOTE (Languages Other Than English) is Auslan Middle Phase of learning includes an elective program
+        where by out Yr 4-7 students participate in extra curricular activities that are of interest and high engagrment teaching 
+        them social and life skills. The program runs for 6 weeks each term and some activities our students have been involved
+        in so far have been tae kwon do, table tennis mini golf, chess, painting, jewelry making, craft, construction.
     </p>
 </body>
 </html>
