--- a/btvn_buoi3.html
+++ b/btvn_buoi3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook</title>
+    <title>Vincent State School</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <style>
          #post {
@@ -16,7 +16,7 @@
         font-size: 130%;
         }
         #post1 {
-        width: 700x;
+        width: 700px;
         height: 900px;
         background: rgb(235, 235, 210);
         color: rgb(116, 116, 110);
@@ -31,9 +31,9 @@
                 <img src=" https://websites.sportstg.com/pics/00/01/21/77/1217770_1_O.jpg" width="35%" height="40%">
             </p>
             <a href="http://127.0.0.1:5500/Home.html">Home | </a>
-            <a href="...">Imformation Couse | </a>
-            <a href="...">Fee Structure | </a>
-            <a href="...">Admission Process | </a>
+            <a href="http://127.0.0.1:5500/Information_Couse.html">Imformation Couse | </a>
+            <a href="http://127.0.0.1:5500/fee.html">Fee Structure | </a>
+            <a href="http://127.0.0.1:5500/admission.html">Admission Process | </a>
         </div>
         <div id="post">
             <h1 style="color: rgb(54, 157, 170);font-family: 'Times New Roman', Times, serif; padding-left: 12%;">
