--- a/fee.html
+++ b/fee.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Fee Structurek</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <style>
          #post {
         width: 666px;
         height: 265px;
-        background: white;
+        background: rgb(255, 255, 255);
         float: left;
         color: black;
         font-size: 130%;
         }
-        /* #post1 {
-        width: 1500x;
+        #post1 {
+        width: 700px;
         height: 900px;
-        background: rgb(156, 156, 22);
+        background: rgb(235, 235, 210);
         color: rgb(116, 116, 110);
         float: right;
-        } */
+        }
     </style>
 </head>
 <body>
@@ -42,22 +42,21 @@
             <h6 style="padding-left:20% ; font-size: 80%; color: rgb(126, 126, 115);">280 Palmerston Street, Townsville, 4814</h6>
         </div>
     </div>
-    <br>
-    <h2>Welcom to Vincent State School</h2>
-    <h3>Welcom to Vincent State School</h3>
-    <p style="font-size: 105%;">Our purpose in the community is to provide high quality learning opportunities for every student.
-        We aim to promote and maintain a positive, safe and orderly learning environment for all students and staff.
-    </p>
-    <h3>We plan to this through:</h3>
-    <p style=" font-size: 105%; font-family: 'Times New Roman', Times, serif;">
-            <p style="padding-left: 3%;">*The delivery of high quality curriculum</p> 
-            <p style="padding-left: 3%;">*Excellence in teaching anhd learning</p>
-            <p style="padding-left: 3%;">*Recognising diversity</p>
-            <p style="padding-left: 3%;">*School/Home/Community Partnerships</p>
-            <p style="padding-left: 3%;">*Valuing Positive Behaviour</p>
+    <h2>PRIMARY</h2>
+    <p style="font-size: 105%;">
+        The Tuition fees for june and the first term fees must be paid before the end of May. This applies even to those who
+        are seeking financial assistance from the school. Those in receipt of Government Concessions are promoted to the next
+        higher class need not pay fees.
     </p>
     <p style="font-size: 105%;">
-            This information guide is an introduction to what we hope will be a very happy association for you with Vincent State School
+        Fees will be paid through the South Indian Bank. Fee bills will be available online which parents can print form the
+        website and pay to the bank by cash.
+    </p>
+    <p style="font-size: 105%;">
+        where possible, parents are requested to pay fees in advance for six months or a year. If the fees for the months are
+        not paid before 10th of the month, the boy is liable to be sent home. If fees cannot be paid in time the Principal's or
+        Vice Principal's permission must be obtained in writing. Please state in your application when you will be able to pay
+        the fees. If the fees, are not paid within 2 months the name will be struck off the rolls.
     </p>
 </body>
 </html>
