--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,7 @@
             <p style="padding-left: 30%;">
                 <img src=" https://websites.sportstg.com/pics/00/01/21/77/1217770_1_O.jpg" width="35%" height="40%">
             </p>
-            <a href="https://daungochuyen.github.io/web2/Home/">Home | </a>
+            <a href="https://daungochuyen.github.io/web2/Home">Home | </a>
             <a href="https://daungochuyen.github.io/web2/Information_Couse">Imformation Couse | </a>
             <a href="https://daungochuyen.github.io/web2/fee">Fee Structure | </a>
             <a href="https://daungochuyen.github.io/web2/admission">Admission Process | </a>
