--- a/Information_Couse.html
+++ b/Information_Couse.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook</title>
+    <title>Information_Couse</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <style>
          #post {
@@ -30,7 +30,7 @@
             <p style="padding-left: 30%;">
                 <img src=" https://websites.sportstg.com/pics/00/01/21/77/1217770_1_O.jpg" width="35%" height="40%">
             </p>
-            <a href="https://daungochuyen.github.io/web2/Home/">Home | </a>
+            <a href="https://daungochuyen.github.io/web2/Home">Home | </a>
             <a href="https://daungochuyen.github.io/web2/Information_Couse">Imformation Couse | </a>
             <a href="https://daungochuyen.github.io/web2/fee">Fee Structure | </a>
             <a href="https://daungochuyen.github.io/web2/admission">Admission Process | </a>
